--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -6,7 +6,9 @@ $global-background-color-dark: #0D1117;
 // Color of the border
 $global-border-color: #f0f0f0;
 $global-border-color-dark: #30363d;
+// ========== Global ========== //
 
+// ========== Header ========== //
 // Color of the header background
 $header-background-color: #f8f8f8;
 $header-background-color-dark: #010409;
@@ -14,7 +16,17 @@ $header-background-color-dark: #010409;
 // Color of the search background
 $search-background-color: #e9e9e9;
 $search-background-color-dark: #0D1117;
-// ========== Global ========== //
+// ========== Header ========== //
+
+// ========== Single Content ========== //
+// Color of the table background
+$table-background-color: #fff;
+$table-background-color-dark: #0d1117;
+
+// Color of the table thead
+$table-thead-color: #ededed;
+$table-thead-color-dark: #202832;
+// ========== Single Content ========== //
 
 // ========== Code ========== //
 // Color of the code
