--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -1,46 +1,32 @@
-// ========== Global ========== //
-// Color of the background
-$global-background-color: #fff;
-$global-background-color-dark: #0D1117;
+:root {
+  .home[posts] {
+    .summary {
+        border-bottom: 1px dashed $global-border-color !important;
+    }
+  }
 
-// Color of the border
-$global-border-color: #f0f0f0;
-$global-border-color-dark: #30363d;
-// ========== Global ========== //
+  .single {
+    .content {
+      .footnotes {
+        hr {
+          border-top: 1px dashed $global-border-color !important;
+        }
+      }
 
-// ========== Header ========== //
-// Color of the header background
-$header-background-color: #f8f8f8;
-$header-background-color-dark: #010409;
+      > h2 > .header-mark::before {
+        content: "#" !important;
+      }
+    }
+  }
+}
 
-// Color of the search background
-$search-background-color: #e9e9e9;
-$search-background-color-dark: #0D1117;
-// ========== Header ========== //
+html.dark {
+  --global-font-color: #b9b9c5 !important;
+  --global-font-secondary-color: #8d8d8e !important;
+  --global-link-color: #b9b9c5 !important;
+  --global-link-hover-color: #ffffff !important;
 
-// ========== Single Content ========== //
-// Color of the table background
-$table-background-color: #fff;
-$table-background-color-dark: #0d1117;
-
-// Color of the table thead
-$table-thead-color: #ededed;
-$table-thead-color-dark: #202832;
-// ========== Single Content ========== //
-
-// ========== Code ========== //
-// Color of the code
-$code-color: #161209;
-$code-color-dark: #fff;
-
-// Color of the code background
-$code-background-color: #f5f5f5;
-$code-background-color-dark: #343942;
-
-// Color of the multi-line code background
-$code-full-background-color: #f5f5f5;
-$code-full-background-color-dark: #161b22;
-
-$code-info-color: #595858;
-$code-info-color-dark: #b1b0b0;
-// ========== Code ========== //
+  code:not(.chroma) {
+    color: #ffffff !important;
+  }
+}
